--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="flexbox">
             <section class="Vcenter">
                 <center> <img style="display: block;-webkit-user-select: none;margin: 0;background-color: #white;
-transition: background-color 300ms;" src="https://dmrunal08.github.io/InfoViz3/Narrative.png" width= "100%", margin: 0 > </center>
+transition: background-color 300ms;" src="https://rucha-ux.github.io/InfoViz3/Narrative.png" width= "100%", margin: 0 > </center>
             </section>
         </div> 
 </body>
