--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>What is your Kurti Size?</title>
+        <title>Data Visualisation</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="fevicon.png">
         <link rel="stylesheet" href="style.css">
