--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="flexbox">
             <section class="Vcenter">
-                <center> <img style="display: block;-webkit-user-select: none;margin: 0;background-color: #white;
+                <center> <img style="display: block;-webkit-user-select: none;top margin: 50;background-color: #white;
 transition: background-color 300ms;" src="Narrative.png" width= "100%", margin: 0 > </center>
             </section>
         </div> 
