--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="Static/index.html">The Static </a>
             <a href="" class="active">The Narrative</a>
         </div>
-        <div class="flexbox">
+        <div class="main">
             <section class="Vcenter">
                 <center> <img style="display: block;-webkit-user-select: none;top margin: 500;background-color: #white;
 transition: background-color 300ms;" src="Narrative.png" width= "100%", margin: 0 > </center>
